Header: Fix Clippy logo scaling in Google Chrome

--- a/project/src/Clippy/ClientApp/src/components/Header/Header.css
+++ b/project/src/Clippy/ClientApp/src/components/Header/Header.css
@@ -11,8 +11,11 @@
   box-shadow: 0 5px 8px -9px rgba(0, 0, 0, 0.75);
 }
 
-.ClippyLogo.MuiTypography-root {
-  scale: 65%;
+.ClippyLogo img {
+  transform: scale(1);
+  -webkit-transform: scale(0.7);
+  -moz-transform: scale(1);
+  float: left;
 }
 
 .Links {
